--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                         	Привет. Меня зовут Анастасия. Я графический дизайнер. Живу в городе Краснодаре. Окончила лицей в 2013 году в городе Майкопе. Параллельно с лицеем окончила художественную школу, в которой обучалась 4 года.
                         </div>
                         <div class="one">
-                        	 В 2018 году окончила университет АГУ по направлению &laquo;Графический дизайн&raquo;. Помимо учёбы сотрудничала с рекламным агентством. Выполняла для них много разных заказов. Набиралась много опыта.
+                        	 В 2018 году окончила университет АГУ по направлению &laquo;Графический дизайн&raquo;. Помимо учёбы сотрудничала с рекламным агентством. Выполняла для них много разных заказов. Набиралась опыта.
                         </div>
                         <div class="one">
                         	Сейчас более 4-х лет профессионально занимаюсь разработкой логотипов, сертификатов, листовок, визиток, фирменных стилей. Так же занимаюсь отрисовкой векторной графики. 
