--- a/story.html
+++ b/story.html
@@ -94,7 +94,7 @@
                 <article>
                     <div class="content-1170 center-relative">
                         <div class="one_half ">
-                            <strong>Пакет Standart - 5 000 &#8381;</strong>
+                            <strong>Логотип (пакет Standart) - 5 000 &#8381;</strong>
                             <br>
                             <ul>
                                 <li>- 1 вариант логотипа</li>
@@ -106,7 +106,7 @@
                             </ul>
                             <br>
                             <br>
-                            <strong>Пакет Premium - 7 000 &#8381;</strong>
+                            <strong>Логотип (пакет Premium) - 7 000 &#8381;</strong>
                             <ul>
                                 <li>- 1 вариант логотипа</li>
                                 <li>- 6 <b>бесплатных</b> правок</li>
