--- a/story.html
+++ b/story.html
@@ -108,7 +108,7 @@
                             <br>
                             <strong>Логотип (пакет Premium) - 6 000 &#8381;</strong>
                             <ul>
-                                <li>- 1 вариант логотипа</li>
+                                <li>- 2 варианта логотипа</li>
                                 <li>- 6 <b>бесплатных</b> правок</li>
                                 <li>- форматы <b>.jpeg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
                                 <li>- водяной знак (картинка на прозрачном фоне)</li>
@@ -135,8 +135,8 @@
                             <br>
                             <strong>Визитка</strong>
                             <ul>
-                                <li>- одна сторона - <b>1 000</b> &#8381;</li>
-                                <li>- две стороны - <b>1 500</b> &#8381;</li>
+                                <li>- одна сторона - <b>800</b> &#8381;</li>
+                                <li>- две стороны - <b>1 300</b> &#8381;</li>
                             </ul>
                             <br>
                             <br>
