--- a/story.html
+++ b/story.html
@@ -94,46 +94,7 @@
                 <article>
                     <div class="content-1170 center-relative">
                         <div class="one_half ">
-                            <strong>Логотип (пакет Standart) - 7 000 &#8381;</strong>
-                            <br>
-                            <ul>
-                                <li>- 1 вариант логотипа</li>
-                                <li>- 3 <b>бесплатные</b> правки</li>
-                                <li>- форматы <b>.jpeg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
-                                <li>- водяной знак (картинка на прозрачном фоне)</li>
-                                <li>- 50% предоплата</li>
-                                <li>- время разработки <b> до 1 недели</b></li>
-                            </ul>
-                            <br>
-                            <br>
-                            <strong>Логотип (пакет Premium) - 10 000 &#8381;</strong>
-                            <ul>
-                                <li>- 2 варианта логотипа</li>
-                                <li>- 6 <b>бесплатных</b> правок</li>
-                                <li>- форматы <b>.jpeg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
-                                <li>- водяной знак (картинка на прозрачном фоне)</li>
-                                <li>- 50% предоплата</li>
-                                <li>- визуальная концепция проекта</li>
-                                <li>- время разработки <b>до 3 дней</b></li>
-                                <li>- <b>В ПОДАРОК</b> настройка лого под формат Instagram</li>
-                            </ul>
-                            <br>
-                            <br>
-                            <strong>Фирменный стиль - 15 000 &#8381;</strong>
-                            <ul>
-                                <li>- логотип (3 концепции на выбор)</li>
-                                <li>- 3 <b>бесплатные</b> правки</li>
-                                <li>- до 5 наименований фирменных элементов на Ваш выбор (визитка, сертификат, пакет и т.д.)</li>
-                                <li>- визуальная концепция проекта</li>
-                                <li>- предоплата 5 000 руб.</li>
-                                <li>- настройка лого под формат Instagram</li>
-                                <li>- время разработки <b>1-2 недели</b></li>
-                            </ul>
-                            <br>
-                            <p>&#9913;&#9913;&#9913; <strong>Платные правки</strong> от 200 руб. &#9913;&#9913;&#9913;</p>
-                            <br>
-                            <br>
-                            <strong>Визитка</strong>
+                        	<strong>Визитка</strong>
                             <ul>
                                 <li>- одна сторона - <b>800</b> &#8381;</li>
                                 <li>- две стороны - <b>1 300</b> &#8381;</li>
@@ -145,7 +106,61 @@
                                 <li>- одна сторона - <b>1 500</b> &#8381;</li>
                                 <li>- две стороны - <b>2 000</b> &#8381;</li>
                             </ul>
-                            <br>                            
+                            <br> 
+                            <br>
+                            <strong>Иконки</strong>
+                            <ul>
+                                <li>- одна иконка - <b>150</b> &#8381;</li>
+                            </ul>
+                            <br> 
+                            <br> 
+                            <strong>Прайс-лист (только А4)</strong>
+                            <ul>
+                                <li>- одна сторона - <b>1 500</b> &#8381;</li>
+                                <li>- две стороны - <b>2 300</b> &#8381;</li>
+                            </ul>
+                            <br> 
+                            <br> 
+                            <strong>Логотип (пакет Standart) - 7 000 &#8381;</strong>
+                            <br>
+                            <ul>
+                                <li>- 1 вариант логотипа</li>
+                                <li>- 5 <b>бесплатных</b> правок</li>
+                                <li>- форматы <b>.jpg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
+                                <li>- водяной знак (логотип на прозрачном фоне)</li>
+                                <li>- 50% предоплата</li>
+                                <li>- время разработки <b> до 1 недели</b></li>
+                            </ul>
+                            <br>
+                            <br>
+                            <strong>Логотип (пакет Premium) - 10 000 &#8381;</strong>
+                            <ul>
+                                <li>- 2 варианта логотипа</li>
+                                <li>- 10 <b>бесплатных</b> правок</li>
+                                <li>- форматы <b>.jpg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
+                                <li>- водяной знак (логотип на прозрачном фоне)</li>
+                                <li>- 50% предоплата</li>
+                                <li>- визуальная концепция проекта</li>
+                                <li>- время разработки <b>до 3 дней</b></li>
+                                <li>- <b>В ПОДАРОК</b> настройка лого под формат Instagram</li>
+                            </ul>
+                            <br>
+                            <br>
+                            <strong>Фирменный стиль - 17 000 &#8381;</strong>
+                            <ul>
+                                <li>- 3 варианта логотипа</li>
+                                <li>- 10 <b>бесплатных</b> правок (5 правок на логотип, 5 на другие элементы фирменного стиля)</li>
+                                <li>- форматы <b>.jpg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
+                                <li>- до 5 наименований фирменных элементов на Ваш выбор (визитка, сертификат, пакет и т.д.)</li>
+                                <li>- визуальная концепция проекта</li>
+                                <li>- предоплата 7 000 руб.</li>
+                                <li>- настройка лого под формат Instagram</li>
+                                <li>- время разработки <b>2 недели</b></li>
+                            </ul>
+                            <br>
+                            <p>&#9913;&#9913;&#9913; <strong>Платные правки на весь прайс</strong> от 200 руб. &#9913;&#9913;&#9913;</p>
+                            <br>
+                            <br>                           
                         </div>
                         <div class="one_half last ">                            
                             <script>
