--- a/story.html
+++ b/story.html
@@ -114,14 +114,14 @@
                             </ul>
                             <br> 
                             <br> 
-                            <strong>Прайс-лист (только А4)</strong>
+                            <strong>Прайс-лист</strong>
                             <ul>
                                 <li>- одна сторона - <b>1 500</b> &#8381;</li>
                                 <li>- две стороны - <b>2 300</b> &#8381;</li>
                             </ul>
                             <br> 
                             <br> 
-                            <strong>Логотип (пакет Standart) - 7 000 &#8381;</strong>
+                            <strong>Логотип (пакет Standart) - от 4 000 &#8381;</strong>
                             <br>
                             <ul>
                                 <li>- 1 вариант логотипа</li>
@@ -133,7 +133,7 @@
                             </ul>
                             <br>
                             <br>
-                            <strong>Логотип (пакет Premium) - 10 000 &#8381;</strong>
+                            <strong>Логотип (пакет Premium) - от 6 000 &#8381;</strong>
                             <ul>
                                 <li>- 2 варианта логотипа</li>
                                 <li>- 10 <b>бесплатных</b> правок</li>
@@ -141,19 +141,19 @@
                                 <li>- водяной знак (логотип на прозрачном фоне)</li>
                                 <li>- 50% предоплата</li>
                                 <li>- визуальная концепция проекта</li>
-                                <li>- время разработки <b>до 3 дней</b></li>
+                                <li>- время разработки <b>до 4 дней</b></li>
                                 <li>- <b>В ПОДАРОК</b> настройка лого под формат Instagram</li>
                             </ul>
                             <br>
                             <br>
-                            <strong>Фирменный стиль - 17 000 &#8381;</strong>
+                            <strong>Фирменный стиль - от 12 000 &#8381;</strong>
                             <ul>
                                 <li>- 3 варианта логотипа</li>
                                 <li>- 10 <b>бесплатных</b> правок (5 правок на логотип, 5 на другие элементы фирменного стиля)</li>
                                 <li>- форматы <b>.jpg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
                                 <li>- до 5 наименований фирменных элементов на Ваш выбор (визитка, сертификат, пакет и т.д.)</li>
                                 <li>- визуальная концепция проекта</li>
-                                <li>- предоплата 7 000 руб.</li>
+                                <li>- предоплата 6 000 руб.</li>
                                 <li>- настройка лого под формат Instagram</li>
                                 <li>- время разработки <b>2 недели</b></li>
                             </ul>
