--- a/story.html
+++ b/story.html
@@ -96,8 +96,8 @@
                         <div class="one_half ">
                         	<strong>Визитка</strong>
                             <ul>
-                                <li>- одна сторона - <b>800</b> &#8381;</li>
-                                <li>- две стороны - <b>1 300</b> &#8381;</li>
+                                <li>- одна сторона - <b>700</b> &#8381;</li>
+                                <li>- две стороны - <b>1 200</b> &#8381;</li>
                             </ul>
                             <br>
                             <br>
@@ -121,7 +121,7 @@
                             </ul>
                             <br> 
                             <br> 
-                            <strong>Логотип (пакет Standart) - от 4 000 &#8381;</strong>
+                            <strong>Логотип (пакет Standart) - 3 500 &#8381;</strong>
                             <br>
                             <ul>
                                 <li>- 1 вариант логотипа</li>
@@ -133,7 +133,7 @@
                             </ul>
                             <br>
                             <br>
-                            <strong>Логотип (пакет Premium) - от 6 000 &#8381;</strong>
+                            <strong>Логотип (пакет Premium) - 5 000 &#8381;</strong>
                             <ul>
                                 <li>- 2 варианта логотипа</li>
                                 <li>- 10 <b>бесплатных</b> правок</li>
@@ -146,14 +146,14 @@
                             </ul>
                             <br>
                             <br>
-                            <strong>Фирменный стиль - от 12 000 &#8381;</strong>
+                            <strong>Фирменный стиль - 10 000 &#8381;</strong>
                             <ul>
                                 <li>- 3 варианта логотипа</li>
                                 <li>- 10 <b>бесплатных</b> правок (5 правок на логотип, 5 на другие элементы фирменного стиля)</li>
                                 <li>- форматы <b>.jpg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
                                 <li>- до 5 наименований фирменных элементов на Ваш выбор (визитка, сертификат, пакет и т.д.)</li>
                                 <li>- визуальная концепция проекта</li>
-                                <li>- предоплата 6 000 руб.</li>
+                                <li>- предоплата 5 000 руб.</li>
                                 <li>- настройка лого под формат Instagram</li>
                                 <li>- время разработки <b>2 недели</b></li>
                             </ul>
