--- a/story.html
+++ b/story.html
@@ -105,7 +105,7 @@
                                 <li>- форматы для Web и печати: CDR, JPG, PDF, PNG</li>
                                 <li>- 50% предоплата</li>
                                 <li>- время разработки до 1 недели</li>
-                                <li>- Исходник предоставляется отдельно (2 000 &#8381;)</li>
+                                <li>- Исходник приобретается отдельно (2 000 &#8381;)</li>
                             </ul>
                             <br>
                             <br>
