--- a/story.html
+++ b/story.html
@@ -95,7 +95,7 @@
                 <article>
                     <div class="content-1170 center-relative">
                         <div class="one_half ">
-                        	<strong>Логотип - 8 000 &#8381;</strong>
+                        	<h6>Логотип - 8 000 &#8381;</h6>
                             <ul>
                                 <li>- 2 варианта логотипа на выбор на основе брифа / ТЗ</li>
                                 <li>- подбор фирменных шрифтов</li>
@@ -110,40 +110,40 @@
                             <br>
                             <br>
 
-                            <strong>Фирменный стиль - от 15 000 &#8381;</strong>
+                            <h6>Фирменный стиль - от 15 000 &#8381;</h6>
                             <ul>
                                 <li>- 3 варианта логотипа</li>
                                 <li>- 10 <b>бесплатных</b> правок (5 правок на логотип, 5 на другие элементы фирменного стиля)</li>
                                 <li>- форматы <b>.jpg</b>, <b>.png</b>, <b>.cdr</b> (вектор)</li>
                                 <li>- до 5 наименований фирменных элементов на Ваш выбор (визитка, сертификат, пакет и т.д.)</li>
                                 <li>- визуальная концепция проекта</li>
-                                <li>- предоплата 6 000 руб.</li>
+                                <li>- предоплата 50%</li>
                                 <li>- настройка лого под формат Instagram</li>
                                 <li>- время разработки <b>2 недели</b></li>
                             </ul>
                             <br>
 
-                        	<strong>Визитка</strong>
+                        	<h6>Визитка</h6>
                             <ul>
                                 <li>- одна сторона - <b>700</b> &#8381;</li>
                                 <li>- две стороны - <b>1 200</b> &#8381;</li>
                             </ul>
                             <br>
                             <br>
-                            <strong>Сертификат</strong>
+                            <h6>Сертификат</h6>
                             <ul>
                                 <li>- одна сторона - <b>1 400</b> &#8381;</li>
                                 <li>- две стороны - <b>1 800</b> &#8381;</li>
                             </ul>
                             <br> 
                             <br>
-                            <strong>Иконки</strong>
+                            <h6>Иконки</h6>
                             <ul>
                                 <li>- одна иконка - <b>150</b> &#8381;</li>
                             </ul>
                             <br> 
                             <br> 
-                            <strong>Прайс-лист</strong>
+                            <h6>Прайс-лист</h6>
                             <ul>
                                 <li>- одна сторона - <b>1 500</b> &#8381;</li>
                                 <li>- две стороны - <b>2 300</b> &#8381;</li>
